@@ -1,7 +1,7 @@
 local addonName, addonTable = ...
 local e = CreateFrame("Frame")
 local L_GLOBALSTRINGS = addonTable.L_GLOBALSTRINGS
-local HMPJunkerMerchantButton = _G.CreateFrame(
+addonTable.HMPJunkerMerchantButton = _G.CreateFrame(
 	"Button",
 	"HMPJunkerMerchantButton",
 	_G.MerchantFrame,
@@ -10,6 +10,32 @@ local HMPJunkerMerchantButton = _G.CreateFrame(
 local normalTexture = e:CreateTexture()
 local pushedTexture = e:CreateTexture()
 local highlightTexture = e:CreateTexture()
+
+function ShowJunkerButton()
+	-- Texture work. Let's recreate the bag sorting button.
+	normalTexture:SetTexture("Interface\\ContainerFrame\\Bags")
+	normalTexture:SetSize(28, 26)
+	normalTexture:SetTexCoord(0.3125, 0.421875, 0.5390625, 0.640625)
+	
+	pushedTexture:SetTexture("Interface\\ContainerFrame\\Bags")
+	pushedTexture:SetSize(28, 26)
+	pushedTexture:SetTexCoord(0.1640625, 0.2734375, 0.8359375, 0.9375)
+	
+	highlightTexture:SetTexture("Interface\\Buttons\\ButtonHilight-Square")
+	highlightTexture:SetSize(24, 23)
+	
+	HMPJunkerMerchantButton:RegisterForClicks("LeftButtonUp", "RightButtonUp")
+	
+	HMPJunkerMerchantButton:SetNormalTexture(normalTexture)
+	HMPJunkerMerchantButton:SetPushedTexture(pushedTexture)
+	HMPJunkerMerchantButton:SetHighlightTexture(highlightTexture, "ADD")
+	
+	-- Let's get the button on the MerchantFrame.
+	HMPJunkerMerchantButton:SetSize(28, 26)
+	HMPJunkerMerchantButton:SetPoint("TOPLEFT", 64, -28)
+	
+	HMPJunkerMerchantButton:Show()
+end
 
 function HelpMePlaySellItems()
 	-- Don't iterate over the whole bag.
@@ -110,27 +136,7 @@ e:RegisterEvent("MERCHANT_SHOW")
 e:SetScript("OnEvent", function(self, event, ...)
 	if HelpMePlayOptionsDB.Junker.Enabled == false or HelpMePlayOptionsDB.Junker.Enabled == nil then return false end
 	if event == "MERCHANT_SHOW" then
-		-- Texture work. Let's recreate the bag sorting button.
-		normalTexture:SetTexture("Interface\\ContainerFrame\\Bags")
-		normalTexture:SetSize(28, 26)
-		normalTexture:SetTexCoord(0.3125, 0.421875, 0.5390625, 0.640625)
-		
-		pushedTexture:SetTexture("Interface\\ContainerFrame\\Bags")
-		pushedTexture:SetSize(28, 26)
-		pushedTexture:SetTexCoord(0.1640625, 0.2734375, 0.8359375, 0.9375)
-		
-		highlightTexture:SetTexture("Interface\\Buttons\\ButtonHilight-Square")
-		highlightTexture:SetSize(24, 23)
-		
-		HMPJunkerMerchantButton:RegisterForClicks("LeftButtonUp", "RightButtonUp")
-		
-		HMPJunkerMerchantButton:SetNormalTexture(normalTexture)
-		HMPJunkerMerchantButton:SetPushedTexture(pushedTexture)
-		HMPJunkerMerchantButton:SetHighlightTexture(highlightTexture, "ADD")
-		
-		-- Let's get the button on the MerchantFrame.
-		HMPJunkerMerchantButton:SetSize(28, 26)
-		HMPJunkerMerchantButton:SetPoint("TOPLEFT", 64, -28)
+		ShowJunkerButton()
 	end
 end)
 
